--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
   },
   "scripts": {
     "start": "php -S localhost:8080 -t public",
-    "test": "phpunit"
+    "test": "phpunit tests/"
   },
   "require": {
     "ext-json": "*"
